<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
            android:title="@string/statusbar_tuner_title" >
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
    </Preference>

    <Preference
         android:key="status_bar_clock"
         android:fragment="com.shell.extras.fragments.ClockDateSettings"
         android:icon="@drawable/ic_status_bar_clock"
         android:title="@string/status_bar_clock_title" />

    <Preference
            android:key="battery_settings"
            android:title="@string/battery_style_category_title"
            android:icon="@drawable/ic_battery_title"
            android:summary="@string/battery_style_category_summary"
            android:fragment="com.shell.extras.fragments.StatusBarBattery" />

    <PreferenceCategory
        android:key="statusbar_ntraffic"
        android:title="@string/statusbar_ntraffic" >

    <Preference
         android:key="network_traffic"
         android:title="@string/traffic_title"
         android:icon="@drawable/ic_traffic"
         android:summary="@string/traffic_summary"
         android:fragment="com.shell.extras.fragments.NetworkTraffic" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="notification_heads"
        android:title="@string/notification_heads" >

            <com.shell.extras.preferences.SystemSettingSwitchPreference
            android:key="less_boring_heads_up"
            android:title="@string/less_boring_heads_up_title"
            android:icon="@drawable/ic_headsup"
            android:summary="@string/less_boring_heads_up_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
